--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: /images/noEggplant.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: contact@defensatechnologies.com
   facebook:
   flickr:
   github: 
